@@ -36,6 +36,11 @@ set(webkit2_api_harness_SOURCES
     ${TESTWEBKITAPI_DIR}/efl/PlatformWebView.cpp
 )
 
+list(APPEND TestJavaScriptCore_LIBRARIES
+    ${ECORE_LIBRARIES}
+    ${EINA_LIBRARIES}
+)
+
 # The list below works like a test expectation. Tests in the
 # test_{webkit2_api|webcore}_BINARIES list are added to the test runner and
 # tried on the bots on every build. Tests in test_{webkit2_api|webcore}_BINARIES
